fixed nav overflow styled media query for nav and header

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rowdies&display=swap');
 
+
 .top-header {
   display: flex;
   justify-content: flex-end;
@@ -50,7 +51,7 @@ and (-webkit-device-pixel-ratio: 3)
 {
 
   .top-header{
-    display: ;
+    display: flex;
   }
 
   .header-links{
@@ -59,6 +60,15 @@ and (-webkit-device-pixel-ratio: 3)
     font-size: 8px;
   }
   .promo{
-    font-size: 6px;
+    /* z-index: 10; */
+    font-size: 2px;
+    /* border-width: 2px; */
+    /* border-color: red; */
+  }
+  .ten-percent{
+    z-index: 15;
+    font-size: 2px;
+    /* border-width: 2px; */
+    /* border-color: yellow; */
   }
 }
